# Airport-Simulation

./: CMakeLists.txt  README  main.c
include/: airplane.h  airport.h  landing.h  landing_bay.h  monitor.h  take_off.h  thread_para.h  timing.h
src/: CMakeLists.txt  airplane.c  airport.c  landing.c  landing_bay.c  monitor.c  take_off.c  timing.c
